# notado-cli

./: Cargo.toml  LICENSE  README.md  queries.graphql  schema.json
src/: main.rs  queries.rs
